<resources>
    <string name="app_name">MyDesignerClothing</string>
    <string name="sign_up_title">Sign up</string>
    <string name="home_title">Home</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone">Phone</string>
    <string name="create_account">Create Account</string>
    <string name="contact_phone_error">Please enter a valid telephone number</string>
    <string name="please_enter_valid_password">Please enter a valid password</string>
    <string name="contact_email_empty_error">Please enter an e-mail address </string>
    <string name="contact_valid_email_error">Please enter a valid e-mail address</string>
    <string name="add_passenger_empty_first_name_error">"Please enter the first name of passenger"</string>
    <string name="add_passenger_empty_last_name_error">"Please enter the last name of passenger"</string>

    <string name="invalid_first_name_error">"Please enter a valid first name."</string>
    <string name="invalid_last_name_error">"Please enter a valid last name."</string>
    <string name="password_empty_error">Please enter a password </string>
    <string name="password_valid_error">Please enter a valid password </string>
    <string name="confirm_password_empty_error">Please re-enter password </string>
    <string name="re_enter_valid_confirm_password_error">Please re-enter a valid password</string>
    <string name="password_do_not_match">The passwords entered do not match</string>

    <string name="menu_home">Home</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_create">Create</string>
    <string name="menu_basket">Basket</string>
    <string name="menu_about">About</string>
    <string name="next">next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="access_media_permissions_msg">To attach photos, we need to access media on your device</string>
    <string name="continue_txt">Continue</string>
    <string name="not_now">NOT NOW</string>
    <string name="media_access_denied_msg">You denied storage access, no photos will be added.</string>
    <string name="upload_picker_title">Select Picture</string>

    <string name="ic_close">"\ue918"</string>
    <string name="ic_text">"\ue945"</string>
    <string name="ic_draw">""\ue944</string>
    <string name="ic_images">"\ue949"</string>
    <string name="ic_save">"\ue946"</string>
    <string name="ic_clear_all">"\ue947"</string>
    <string name="ic_continue">"\ue948"</string>
    <string name="ic_delete">"\ue92c"</string>

    <string name="undo">Undo</string>
    <string name="erase">Erase</string>

    <string name="save">Save</string>
    <string name="clear_all">Clear All</string>
    <string name="addtocart">Add to Cart</string>
    <string name="totalamoaunt">Total Amount</string>
    <string name="continueshopping">Continue Shopping</string>
    <string name="checkout">Checkout</string>

</resources>
